tools/tests/errors/surf_lib_05.ki
# An unbalanced parenthesis is an invalid regex.
var r = import("regex")
discard r.compile("(abc")
